force-app/main/default/objects/Price_Calculation__mdt/Price_Calculation__mdt.object-meta.xml
<CustomObject>
    <label>Price Calculation</label>
    <pluralLabel>Price Calculations</pluralLabel>
</CustomObject>