force-app/main/default/objects/Price_Calculation__mdt/fields/Branding_Menu_Logo__c.field-meta.xml
<CustomField>
    <fullName>Branding_Menu_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branding: Menu/Logo</label>
    <type>Checkbox</type>
</CustomField>