force-app/main/default/objects/Price_Calculation__mdt/fields/Branding_Table_presentation__c.field-meta.xml
<CustomField>
    <fullName>Branding_Table_presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branding: Table presentation</label>
    <type>Checkbox</type>
</CustomField>