force-app/main/default/objects/Price_Calculation__mdt/fields/Digital_ordering__c.field-meta.xml
<CustomField>
    <fullName>Digital_ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital ordering?</label>
    <type>Checkbox</type>
</CustomField>