force-app/main/default/objects/Price_Calculation__mdt/fields/Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Growth_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Growth: Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>