force-app/main/default/objects/Price_Calculation__mdt/fields/Growth_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Growth_Revenue__c</fullName>
    <label>Growth: Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>