force-app/main/default/objects/Price_Calculation__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gemeinschaftsverpflegung</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Gastro &amp; Sonstige</fullName>
            </value>
            <value>
                <fullName>Einkaufsgesellschaft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>