force-app/main/default/objects/Price_Calculation__mdt/fields/of_Articles__c.field-meta.xml
<CustomField>
    <fullName>of_Articles__c</fullName>
    <label># of Articles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>