force-app/main/default/objects/Price_Calculation__mdt/fields/of_different_coffe_of_e_preparations__c.field-meta.xml
<CustomField>
    <fullName>of_different_coffe_of_e_preparations__c</fullName>
    <label># of different coffee preparations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>