force-app/main/default/objects/Price_Calculation__mdt/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Röstkaffee</fullName>
            </value>
            <value>
                <fullName>Tee</fullName>
            </value>
            <value>
                <fullName>Trinkschokolade</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>