force-app/main/default/objects/Price_Calculation__mdt/fields/Skonto__c.field-meta.xml
<CustomField>
    <fullName>Skonto__c</fullName>
    <label>Skonto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>0-10 days</fullName>
            </value>
            <value>
                <fullName>&gt;10 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>