force-app/main/default/objects/Price_Calculation__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bestellweg</fullName>
            </value>
            <value>
                <fullName>Grundrabatt</fullName>
            </value>
            <value>
                <fullName>Index-Kondition</fullName>
            </value>
            <value>
                <fullName>Markensichtbarkeit</fullName>
            </value>
            <value>
                <fullName>Maximaler Teerabatt</fullName>
            </value>
            <value>
                <fullName>Skonto</fullName>
            </value>
            <value>
                <fullName>Sortiment</fullName>
            </value>
            <value>
                <fullName>Volumen</fullName>
            </value>
            <value>
                <fullName>Wachstum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>