force-app/main/default/objects/Price_Calculation__mdt/fields/Volume_in_kg__c.field-meta.xml
<CustomField>
    <fullName>Volume_in_kg__c</fullName>
    <label>Volume (in kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>