force-app/main/default/objects/Price_Calculation__mdt/listViews/Listview_witrh_Discount.listView-meta.xml
<ListView>
    <fullName>Listview_witrh_Discount</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Discount__c</columns>
    <columns>Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>Listview witrh Discount</label>
    <language>en_US</language>
</ListView>